# vectcut-skills

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  剪映使用技巧-重复播放.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: client.rs  main.rs
tests/: client_test.rs
usr/libexec/cups/apple/: http  smb
usr/libexec/cups/backend/: bluetooth  epsonfax  riousbprint  snmp  socket  usb
usr/libexec/cups/cgi-bin/: admin.cgi  classes.cgi  help.cgi  jobs.cgi  printers.cgi
usr/libexec/cups/command/: ippevepcl  ippeveps
usr/libexec/cups/daemon/: cups-deviced  cups-driverd  cups-exec  cups-lpd
usr/libexec/cups/filter/: cgbannertopdf  cgimagetopdf  cgpdftopdf  cgpdftops  cgpdftoraster  cgtexttopdf  commandtops  gziptoany  kyoPDFfilter_F  kyofilter_C  kyofilter_F  kyoprefilter_C  kyoprefilter_F  pstoappleps  pstops  rastertoepson  rastertohp  rastertolabel  rastertopwg  rastertotiff  rastertourf
usr/libexec/cups/monitor/: bcp  tbcp
usr/libexec/cups/notifier/: mailto  rss
